# mutex-implementations

./: .gitignore  CMakeLists.txt
include/: config.h  dekker.h  dijkstra.h  lock.h  lock_types.h  peterson.h  pthread_lock.h  synch.h  synch_types.h
src/: config.c  dekker.c  dijkstra.c  lock.c  main.c  peterson.c  pthread_lock.c  synch.c
